# brainwash

./: .gitignore  Cargo.toml  INTRO.md  MODULAR_TUI.md  patch.bw  patch1.bw
benches/: adsr_bench.rs  oscillator_bench.rs  ramp_bench.rs  sequence_bench.rs
brainwash-macros/: Cargo.toml
brainwash-macros/src/: lib.rs
examples/coin/: Cargo.toml
examples/coin/src/: main.rs
examples/epic/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
exploration/: TRACK_NOTATION.md
exploration/examples/: demo.rs
exploration/src/: envelopes.rs  filters.rs  instrument.rs  lib.rs  live.rs  oscillators.rs  reverbs.rs  scale.rs  track.rs  utils.rs  wav.rs
signal-macros/: Cargo.toml
signal-macros/src/: lib.rs
src/: allpass.rs  audio.rs  clock.rs  comb.rs  delay.rs  distortion.rs  envelopes.rs  filters.rs  flanger.rs  gate_ramp.rs  graph.rs  keyboard.rs  lib.rs  live.rs  main.rs  multimodule.rs  oscillators.rs  ramp.rs  reverb.md  reverb.rs  scale.rs  sequencing.rs  signal.rs  synth.rs  track.rs  tui.rs  utils.rs  wav.rs  wavetable.rs
src/tui/: app.rs  bindings.rs  config.rs  engine.rs  grid.rs  instrument.rs  mod.rs  module.rs  patch.rs  persist.rs  render.rs
src/tui/widgets/: adsr.rs  edit.rs  envelope.rs  grid.rs  help.rs  mod.rs  palette.rs  probe.rs  sample.rs  status.rs  util.rs
