[package]
name = "brainwash"
version = "0.1.0"
edition = "2024"

[lib]
name = "brainwash"
path = "src/lib.rs"

[features]
default = []
graph = ["ratatui"]

[[example]]
name = "simple"
path = "examples/simple/src/main.rs"

[dependencies]
cpal = "0.15"
hound = "3.5"
ratatui = { version = "0.29.0", optional = true }
crossterm = "0.29.0"
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", default-features = false, features = [
    "backtrace",
] }

[dev-dependencies]
dioxus-devtools = { version = "0.7.0-alpha.1" }
criterion = { version = "0.5", features = ["html_reports"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
debug = true

[[bin]]
name = "generate_wavetables"
path = "src/bin/generate_wavetables.rs"

[[bench]]
name = "sequence_bench"
harness = false

[[bench]]
name = "oscillator_bench"
harness = false

[[bench]]
name = "adsr_bench"
harness = false

[[bench]]
name = "ramp_bench"
harness = false
