[package]
name = "brainwash"
version = "0.1.0"
edition = "2024"

[lib]
name = "brainwash"
path = "src/lib.rs"

[features]
default = ["live"]
live = ["cpal"]
wav = ["hound"]
tui = ["live", "ratatui", "crossterm"]

[[example]]
name = "simple"
path = "examples/simple/src/main.rs"

[[example]]
name = "coin"
path = "examples/coin/src/main.rs"

[dependencies]
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", features = [
    "backtrace",
] }
rlsf = "0.2"

# LIVE
cpal = { version = "0.15", optional = true }

# WAV
hound = { version = "3.5", optional = true }

# TUI
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
nom = "8.0.0"

[dev-dependencies]
dioxus-devtools = { version = "0.7.0-alpha.1" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "generate_wavetables"
path = "src/bin/generate_wavetables.rs"

[[bench]]
name = "sequence_bench"
harness = false

[[bench]]
name = "oscillator_bench"
harness = false

[[bench]]
name = "adsr_bench"
harness = false

[[bench]]
name = "ramp_bench"
harness = false
