[package]
name = "brainwash"
version = "0.1.0"
edition = "2024"

[lib]
name = "brainwash"
path = "src/lib.rs"

[features]
default = ["live"]
live = ["cpal"]
wav = ["hound"]
tui = ["live", "wav", "ratatui", "dep:flume", "dep:tui-input", "dep:lilt", "dep:toml"]

[[example]]
name = "simple"
path = "examples/simple/src/main.rs"

[[example]]
name = "coin"
path = "examples/coin/src/main.rs"

[dependencies]
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", features = [
    "backtrace",
] }
rlsf = "0.2"

# LIVE
cpal = { version = "0.15", optional = true }

# WAV
hound = { version = "3.5", optional = true }

# TUI
ratatui = { version = "0.29.0", features = ["crossterm"], optional = true }
flume = { version = "0.11", optional = true }
tui-input = { version = "0.11", optional = true }
lilt = { version = "0.8", optional = true }
fastrand = "2"
nom = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
toml = { version = "0.8", optional = true }

[dev-dependencies]
dioxus-devtools = { version = "0.7.0-alpha.1" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "generate_wavetables"
path = "src/bin/generate_wavetables.rs"

[[bin]]
name = "bwsh"
path = "src/bin/bwsh.rs"
required-features = ["tui"]

[[bench]]
name = "sequence_bench"
harness = false

[[bench]]
name = "oscillator_bench"
harness = false

[[bench]]
name = "adsr_bench"
harness = false

[[bench]]
name = "ramp_bench"
harness = false
